#77 fixed classloading for APOC plugins